Fix a confusing overflow quirk (#76)

--- a/packages/background-container/src/scss/_shield-left.scss
+++ b/packages/background-container/src/scss/_shield-left.scss
@@ -1,7 +1,6 @@
 &.bg--shield-left {
   .bg__sprite .sprite {
     position: absolute;
-    z-index: -1;
     height: auto;
     width: rem(70);
     left: rem(-62);
