--- a/packages/background-container/src/scss/_shield-program-page-at-a-glance.scss
+++ b/packages/background-container/src/scss/_shield-program-page-at-a-glance.scss
@@ -1,7 +1,6 @@
 &.bg--shield-program-page-at-a-glance {
   .bg__sprite .sprite {
     position: absolute;
-    z-index: -1;
     width: rem(53.2);
     height: auto;
     right: rem(-32);
