--- a/packages/background-container/src/scss/_shield-right.scss
+++ b/packages/background-container/src/scss/_shield-right.scss
@@ -1,7 +1,6 @@
 &.bg--shield-right {
   .bg__sprite .sprite {
     position: absolute;
-    z-index: -1;
     height: auto;
     width: rem(70);
     right: rem(-58);
